--- a/app.json
+++ b/app.json
@@ -17,7 +17,10 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "EasyGO uses camera to allow you to take a profile picture"
+      }
     },
     "android": {
       "adaptiveIcon": {
