--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
+    "expo-camera": "~11.0.2",
     "expo-font": "~9.1.0",
+    "expo-image-manipulator": "~9.1.0",
+    "expo-location": "~12.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
