implemented add/remove diners

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "easygo-user",
+    "name": "EasyGO(User)",
     "slug": "easygo-user",
     "version": "1.0.0",
     "orientation": "portrait",
