--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,11 +132,11 @@ android {
     }
 
     defaultConfig {
-        applicationId 'com.geottuse.serviceapp.users'
+        applicationId 'com.geottuse.serviceapp.user'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0.0"
+        versionName "0.1.3"
     }
     splits {
         abi {
