--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "easygo-user",
+    "name": "EasyGO(User)",
     "slug": "easygo-user",
-    "version": "0.1.3",
+    "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
