--- a/ios/easygouser/Info.plist
+++ b/ios/easygouser/Info.plist
@@ -25,7 +25,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.geottuse.serviceapp.users</string>
+				<string>com.geottuse.serviceapp.user</string>
 			</array>
 		</dict>
 	</array>
@@ -47,15 +47,17 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>EasyGO uses camera to allow you to take a profile picture</string>
+	<string>EasyGO (User) uses camera to allow you to take a profile picture</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>EasyGO uses your location to show you the nearest restaurants, hair/nail salons</string>
+	<string>EasyGO (User) uses your location to show you the nearest restaurants, hair/nail salons</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Allow $(PRODUCT_NAME) to access your location</string>
 	<key>NSLocationUsageDescription</key>
-	<string>EasyGO uses your location to show you the nearest restaurants, hair/nail salons</string>
+	<string>EasyGO (User) uses your location to show you the nearest restaurants, hair/nail salons</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>EasyGO uses your location to show you the nearest restaurants, hair/nail salons</string>
+	<string>EasyGO (User) uses your location to show you the nearest restaurants, hair/nail salons</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string></string>
+	<string>Allow $(PRODUCT_NAME) to access your microphone</string>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
