--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "expo start --dev-client"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
@@ -19,10 +19,10 @@
     "expo-notifications": "~0.13.3",
     "expo-splash-screen": "~0.13.4",
     "expo-status-bar": "~1.1.0",
-    "expo-updates": "~0.10.5",
+    "expo-updates": "~0.10.13",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
@@ -33,5 +33,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "name": "easygo-user",
+  "version": "1.0.0"
 }
