--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "EasyGO(User)",
     "slug": "easygo-user",
-    "version": "0.0.2",
+    "version": "0.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -19,7 +19,7 @@
       "buildNumber": "0",
       "infoPlist": {
         "NSCameraUsageDescription": "EasyGO (User) uses camera to allow you to take a profile picture",
-        "NSMicrophoneUsageDescription": "",
+        "NSMicrophoneUsageDescription": "EasyGO (User) does not need microphone",
         "NSLocationWhenInUseUsageDescription": "EasyGO (User) uses your location to show you the nearest restaurants and salons",
         "NSLocationUsageDescription": "EasyGO (User) uses your location to show you the nearest restaurants and salons",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "EasyGO (User) uses your location to show you the nearest restaurants and salons"
