--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-camera": "~12.0.3",
     "expo-font": "~10.0.3",
     "expo-image-manipulator": "~10.1.2",
+    "expo-image-picker": "~11.0.3",
     "expo-location": "~13.0.4",
     "expo-notifications": "~0.13.3",
     "expo-splash-screen": "~0.13.4",
