--- a/package.json
+++ b/package.json
@@ -1,40 +1,39 @@
 {
-  "main": "index.js",
+  "name": "easygo-user",
+  "version": "1.0.0",
   "scripts": {
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "start": "expo start --dev-client"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
-    "expo": "~43.0.0",
+    "expo": "~43.0.2",
     "expo-camera": "~12.0.3",
     "expo-font": "~10.0.3",
     "expo-image-manipulator": "~10.1.2",
-    "expo-image-picker": "~11.0.3",
     "expo-location": "~13.0.4",
     "expo-notifications": "~0.13.3",
-    "expo-splash-screen": "~0.13.4",
+    "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
-    "expo-updates": "~0.10.13",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
-    "socket.io-client": "^4.3.2"
+    "socket.io-client": "^4.4.0",
+    "expo-updates": "~0.10.13",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true,
-  "name": "easygo-user",
-  "version": "1.0.0"
+  "private": true
 }
