--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
     "expo-camera": "~12.0.3",
     "expo-font": "~10.0.3",
     "expo-image-manipulator": "~10.1.2",
+    "expo-image-picker": "~11.0.3",
     "expo-location": "~13.0.4",
     "expo-notifications": "~0.13.3",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.13",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
-    "socket.io-client": "^4.4.0",
-    "expo-updates": "~0.10.13",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0"
+    "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
