ready for testflight #2.4

--- a/app.json
+++ b/app.json
@@ -17,9 +17,9 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": false,
+      "supportsTablet": true,
       "bundleIdentifier": "com.geottuse.serviceapp.user",
-      "buildNumber": "0",
+      "buildNumber": "12",
       "infoPlist": {
         "NSCameraUsageDescription": "EasyGO (User) uses camera to allow you to take a profile picture",
         "NSMicrophoneUsageDescription": "EasyGO (User) does not need microphone",
