--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-navigation/native": "^6.0.8",
-    "@react-navigation/native-stack": "^6.4.1",
-    "axios": "^0.24.0",
+    "@react-navigation/native-stack": "^6.5.0",
+    "axios": "0.24.0",
     "expo": "~44.0.0",
-    "expo-camera": "~12.1.0",
+    "expo-camera": "~12.1.2",
     "expo-font": "~10.0.4",
     "expo-image-manipulator": "~10.2.0",
     "expo-image-picker": "~12.0.1",
