--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/chilanka": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "0.24.0",
     "expo": "~45.0.0",
     "expo-camera": "~12.2.0",
-    "expo-font": "~10.1.0",
     "expo-image-manipulator": "~10.3.1",
     "expo-image-picker": "~13.1.1",
     "expo-keep-awake": "~10.1.1",
