redid booktime screen

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "EasyGO (User)",
+    "name": "EasyGO U",
     "slug": "easygo-user",
     "version": "0.0.0",
     "orientation": "portrait",
