--- a/package.json
+++ b/package.json
@@ -14,31 +14,31 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "0.24.0",
-    "expo": "~45.0.0",
-    "expo-camera": "~12.2.0",
-    "expo-image-manipulator": "~10.3.1",
-    "expo-image-picker": "~13.1.1",
-    "expo-keep-awake": "~10.1.1",
-    "expo-location": "~14.2.2",
-    "expo-notifications": "~0.15.3",
-    "expo-speech": "~10.2.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-system-ui": "~1.2.0",
-    "expo-updates": "~0.13.2",
+    "expo": "^46.0.0",
+    "expo-camera": "~12.3.0",
+    "expo-image-manipulator": "~10.4.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-keep-awake": "~10.2.0",
+    "expo-location": "~14.3.0",
+    "expo-notifications": "~0.16.1",
+    "expo-speech": "~10.3.0",
+    "expo-splash-screen": "~0.16.1",
+    "expo-status-bar": "~1.4.0",
+    "expo-system-ui": "~1.3.0",
+    "expo-updates": "~0.14.5",
     "geottuse-tools": "^0.0.28",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-localize": "^2.2.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.18.6"
   },
   "private": true
 }
